--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -34,16 +34,18 @@ $grays: map-merge(
   $grays
 );
 
-$blue:    #007bff !default;
-$indigo:  #6610f2 !default;
-$purple:  #6f42c1 !default;
-$pink:    #e83e8c !default;
-$red:     #dc3545 !default;
-$orange:  #fd7e14 !default;
-$yellow:  #ffc107 !default;
-$green:   #28a745 !default;
-$teal:    #20c997 !default;
-$cyan:    #17a2b8 !default;
+$blue:         #007bff !default;
+$indigo:       #6610f2 !default;
+$purple:       #6f42c1 !default;
+$pink:         #e83e8c !default;
+$red:          #dc3545 !default;
+$orange:       #fd7e14 !default;
+$yellow:       #ffc107 !default;
+$green:        #28a745 !default;
+$teal:         #20c997 !default;
+$cyan:         #17a2b8 !default;
+$jb-primary:   #00a99d !default;
+$jb-secondary: #676565 !default;
 
 $colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
@@ -66,8 +68,8 @@ $colors: map-merge(
   $colors
 );
 
-$primary:       $blue !default;
-$secondary:     $gray-600 !default;
+$primary:       $jb-primary !default;
+$secondary:     $jb-secondary !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
