Noor colors test.

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -44,7 +44,7 @@ $yellow:       #ffc107 !default;
 $green:        #28a745 !default;
 $teal:         #20c997 !default;
 $cyan:         #17a2b8 !default;
-$jb-primary:   #00a99d !default;
+$jb-primary:   #fe6658 !default;
 $jb-secondary: #676565 !default;
 
 $colors: () !default;
