--- a/scss/_range-slider.scss
+++ b/scss/_range-slider.scss
@@ -1,14 +1,24 @@
 .range-slider {
   $fontSize: 0.8rem;
-  $knobHeight: $fontSize*2;
+  $knobHeight: $fontSize * 2;
   $rangeHeight: $knobHeight;
   $sliderHeight: $fontSize/2;
   $fontColor: $white;
+  $transition: 0.125s ease;
+  $knobTransitions: margin $transition, height $transition, padding $transition;
 
   position: relative;
   display: flex;
   align-items: center;
   height: $rangeHeight;
+
+  &.active-dragging .slider .slider-limit {
+    .knob {
+      margin-top: $knobHeight * -1;
+      height: $knobHeight * 2;
+      padding-bottom: $knobHeight;
+    }
+  }
 
   .slider {
     position: relative;
@@ -48,7 +58,7 @@
         cursor: pointer;
         border: 0;
         outline: 0;
-        @include transition($btn-transition);
+        @include transition(join($btn-transition, ($knobTransitions)));
         &:hover {
           color: $fontColor;
           background-color: darken($primary, 10%);
@@ -56,9 +66,7 @@
         &:focus,
         &:active {
           color: $fontColor;
-          box-shadow: $btn-box-shadow,
-            0 0 0 $btn-focus-width
-              rgba(mix(color-yiq($primary), $primary, 15%), 0.5);
+          box-shadow: $btn-box-shadow, 0 0 0 $btn-focus-width rgba(mix(color-yiq($primary), $primary, 15%), 0.5);
         }
         &::-moz-focus-inner {
           padding: 0;
