--- a/scss/_range-slider.scss
+++ b/scss/_range-slider.scss
@@ -5,7 +5,7 @@
   $sliderHeight: $fontSize/2;
   $fontColor: $white;
   $transition: 0.125s ease;
-  $knobTransitions: margin $transition, height $transition, padding $transition;
+  $knobTransitions: margin $transition, height $transition, padding $transition, border-radius $transition;
 
   position: relative;
   display: flex;
@@ -17,6 +17,7 @@
       margin-top: $knobHeight * -1;
       height: $knobHeight * 2;
       padding-bottom: $knobHeight;
+      border-radius: $knobHeight $knobHeight ($knobHeight * 2) ($knobHeight * 2);
     }
   }
 
