--- a/scss/_range-slider.scss
+++ b/scss/_range-slider.scss
@@ -1,103 +1,77 @@
 .range-slider {
-  $fontSize: 0.8rem;
-  $knobHeight: $fontSize * 2;
-  $rangeHeight: $knobHeight;
-  $sliderHeight: $fontSize/2;
-  $fontColor: $white;
+  $font-color: $white;
+  $font-size: 0.8rem;
+  $knob-height: $font-size * 2;
+  $range-height: $knob-height;
+  $slider-height: $font-size / 2;
   $transition: 0.125s ease;
-  $knobTransitions: margin $transition, height $transition, padding $transition, border-radius $transition;
+  $knob-transitions: margin $transition, height $transition, padding $transition, border-radius $transition;
 
-  position: relative;
-  display: flex;
   align-items: center;
-  height: $rangeHeight;
+  display: flex;
+  height: $range-height;
+  position: relative;
 
   &.active-dragging .slider .slider-limit {
     .knob {
-      margin-top: $knobHeight * -1;
-      height: $knobHeight * 2;
-      padding-bottom: $knobHeight;
-      border-radius: $knobHeight $knobHeight ($knobHeight * 2) ($knobHeight * 2);
+      border-radius: $knob-height $knob-height ($knob-height * 2) ($knob-height * 2);
+      height: $knob-height * 2;
+      margin-top: $knob-height * -1;
+      padding-bottom: $knob-height;
     }
   }
 
   .slider {
-    position: relative;
-    height: $sliderHeight;
-    padding: 0 $sliderHeight 0 0;
-    width: 100%;
     background: lighten(desaturate($primary, 100%), 15%);
-    border-radius: ($sliderHeight/2);
+    border-radius: ($slider-height/2);
+    height: $slider-height;
+    padding: 0 $slider-height 0 0;
+    position: relative;
+    width: 100%;
 
     .slider-limit {
+      height: $slider-height;
       position: relative;
-      height: $sliderHeight;
 
       .filled-up {
+        background: lighten($primary, 7.5%);
+        border-radius: ($slider-height/2);
+        height: $slider-height;
+        left: 0;
         position: absolute;
         top: 0;
-        left: 0;
         width: 0;
-        height: $sliderHeight;
-        background: lighten($primary, 7.5%);
-        border-radius: ($sliderHeight/2);
       }
 
       .knob {
+        @include transition(join($btn-transition, ($knob-transitions)));
         @extend .btn;
-        position: absolute;
-        top: (($knobHeight - $sliderHeight)/-2);
-        transform: translateX(-50%);
-        min-width: $knobHeight * 1.25;
-        padding: 0 ($knobHeight/2);
-        height: $knobHeight;
-        font-size: $fontSize;
-        color: $fontColor;
         background-color: $primary;
-        border-radius: ($knobHeight/2);
-        overflow: visible;
-        cursor: pointer;
         border: 0;
+        border-radius: ($knob-height / 2);
+        color: $font-color;
+        cursor: pointer;
+        font-size: $font-size;
+        height: $knob-height;
+        min-width: $knob-height * 1.25;
         outline: 0;
-        @include transition(join($btn-transition, ($knobTransitions)));
+        overflow: visible;
+        padding: 0 ($knob-height / 2);
+        position: absolute;
+        top: (($knob-height - $slider-height)/-2);
+        transform: translateX(-50%);
         &:hover {
-          color: $fontColor;
           background-color: darken($primary, 10%);
+          color: $font-color;
         }
         &:focus,
         &:active {
-          color: $fontColor;
           box-shadow: $btn-box-shadow, 0 0 0 $btn-focus-width rgba(mix(color-yiq($primary), $primary, 15%), 0.5);
+          color: $font-color;
         }
         &::-moz-focus-inner {
-          padding: 0;
           border: 0;
-        }
-      }
-    }
-  }
-
-  &[data-disabled="true"] {
-    .slider-wrapper {
-      .slider {
-        background: #e0e0e0;
-
-        .slider-limit {
-          .filled-up {
-            background: #b3b3b3;
-          }
-
-          .handle {
-            .tooltip {
-              span {
-                background-color: rgba(0, 0, 0, 0.3);
-              }
-            }
-
-            .knob {
-              background-color: #b3b3b3;
-            }
-          }
+          padding: 0;
         }
       }
     }
