--- a/scss/_frankly-form.scss
+++ b/scss/_frankly-form.scss
@@ -1,5 +1,6 @@
 /* stylelint-disable property-blacklist */
-/* stylelint-disable scss/dollar-variable-default */
+$dimension: 75px !default;
+$border: $dimension / 5 !default;
 .frankly-form {
   position: relative;
   .screen {
@@ -9,113 +10,78 @@
     z-index: $zindex-modal-backdrop;
     box-sizing: content-box;
     display: none;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 100%;
     padding: 0 ($grid-gutter-width / 2);
     margin: 0 ($grid-gutter-width / -2);
-    background-color: rgba(255, 255, 255, .5);
+    background-color: rgba(0, 0, 0, .5);
   }
-  &.loading {
-    .screen {
-      display: flex;
-    }
-  }
+  &.loading,
   &.done {
     .screen {
       display: flex;
     }
+    .content {
+      display: block;
+    }
   }
-}
-// Define vars we'll be using
-$brand-success: #5cb85c;
-$loader-size: 8em !default;
-$check-height: $loader-size / 2;
-$check-width: $check-height / 2;
-$check-left: ($loader-size / 6 + $loader-size / 12);
-$error-left: $loader-size / 4;
-$check-thickness: 2px;
-$check-color: $brand-success;
-
-.circle-loader {
-  position: relative;
-  box-sizing: content-box;
-  display: inline-block;
-  margin: 0 0 30px 10px;
-  vertical-align: top;
-  border: $check-thickness solid rgba(0, 0, 0, .2);
-  border-left-color: $check-color;
-  animation-name: loader-spin;
-  animation-duration: 1s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-}
-
-.circle-loader,
-.circle-loader::after {
-  width: $loader-size;
-  height: $loader-size;
-  border-radius: 50%;
-}
-
-.load-complete {
-  border-color: $check-color;
-  transition: border 500ms ease-out;
-  animation: none;
-}
-.load-error {
-  border-color: $error-color;
-  transition: border 500ms ease-out;
-  animation: none;
-}
-
-.checkmark {
-  box-sizing: content-box;
-  display: none;
-  &.draw::after {
-    position: absolute;
-    top: $check-height;
-    left: $check-left;
-    width: $check-width;
-    height: $check-height;
-    content: "";
-    border-top: $check-thickness solid $check-color;
-    border-right: $check-thickness solid $check-color;
-    opacity: 1;
-    transform: scaleX(-1) rotate(135deg);
-    transform-origin: left top;
-    animation-name: checkmark;
-    animation-duration: 1.2s;
-    animation-timing-function: ease;
+  &.loading {
+    .content {
+      width: $dimension;
+      height: $dimension;
+      border: $border solid rgba(255, 255, 255, .5);
+      border-bottom: $border solid #fff;
+      border-radius: 50%;
+      animation: spin .5s linear infinite;
+    }
+    @keyframes spin {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
   }
-}
-@keyframes loader-spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-@keyframes checkmark {
-  0% {
-    width: 0;
-    height: 0;
-    opacity: 1;
-  }
-  20% {
-    width: $check-width;
-    height: 0;
-    opacity: 1;
-  }
-  40% {
-    width: $check-width;
-    height: $check-height;
-    opacity: 1;
-  }
-  100% {
-    width: $check-width;
-    height: $check-height;
-    opacity: 1;
+  &.done {
+    .content {
+      width: $dimension * .6;
+      height: $dimension;
+      border: 0 solid rgba(255, 255, 255, 0);
+      border-right: $border solid #fff;
+      border-bottom: $border solid #fff;
+      border-radius: 0;
+      transform: rotate(410deg);
+      animation: done .5s ease-out 1;
+    }
+    @keyframes done {
+      0% {
+        width: $dimension;
+        height: $dimension;
+        border: $border solid rgba(255, 255, 255, .5);
+        border-right: $border solid #fff;
+        border-radius: 50%;
+        transform: rotate(0deg);
+      }
+      50% {
+        width: $dimension;
+        height: $dimension;
+        border: $border solid rgba(255, 255, 255, 0);
+        border-right: $border solid #fff;
+        border-bottom: $border solid #fff;
+        border-radius: 50%;
+      }
+      100% {
+        width: $dimension * .6;
+        height: $dimension;
+        border-right: $border solid #fff;
+        border-bottom: $border solid #fff;
+        border-radius: 0;
+        transform: rotate(410deg);
+      }
+    }
   }
 }
 /* stylelint-enable */
