--- a/scss/_frankly-form.scss
+++ b/scss/_frankly-form.scss
@@ -22,9 +22,16 @@ $border: $dimension / 5 !default;
   &.done {
     .screen {
       display: flex;
+      &.fade {
+        opacity: 0;
+        transition: opacity .5s ease 0s;
+      }
     }
     .content {
+      position: absolute;
+      top: 50%;
       display: block;
+      transition: top .25s ease 0s;
     }
   }
   &.loading {
