--- a/scss/_noor.scss
+++ b/scss/_noor.scss
@@ -180,11 +180,13 @@ $flagged: false !default;
     height: 5rem;
   }
 }
-.border-box {
-  height: 40px;
-  margin-top: -40px;
-  line-height: 50px;
-  background: linear-gradient(transparent 0%, transparent 5%, #fff 60%, #fff 90%);
+@include media-breakpoint-down(sm) {
+  .border-box {
+    height: 40px;
+    margin-top: -40px;
+    line-height: 50px;
+    background: linear-gradient(transparent 0%, transparent 5%, #fff 60%, #fff 90%);
+  }
 }
 .bulleted {
   &::before {
